# dasBinder

./: CMakeLists.txt
dasShared/: CMakeLists.txt
dasShared/python_modules/das_shared/: assertions.py
examples/test/: binding_config.py  bindings.cpp  bindings_generated.inc  generated_bindings.cpp  header_to_bind.h  main.cpp  test_binding.das
python_modules/das_binder/: binder.py  config.py  das_keywords.py  main.py
python_modules/das_shared/: diag.py
